# homecoming

./: .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  Cargo.toml  HOMECOMING_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PLANNING_INDEX.md  README.md  homecoming.md
crates/homecoming/: Cargo.toml
crates/homecoming/src/: lib.rs
crates/homecoming_amenable/: Cargo.toml
crates/homecoming_amenable/src/: lib.rs
crates/homecoming_amenable/tests/: stoplight_test.rs
crates/homecoming_core/: Cargo.toml
crates/homecoming_core/src/: args.rs  binding.rs  build.rs  code.rs  extent.rs  fragment.rs  ir.rs  lib.rs  locality.rs  scope.rs  selection.rs  source.rs
crates/homecoming_core/tests/: calculator_test.rs  code_test.rs  scope_test.rs
crates/homecoming_derive/: Cargo.toml
crates/homecoming_derive/src/: code.rs  lib.rs
crates/homecoming_derive/tests/: code_test.rs
