[workspace]
members = [
  "crates/homecoming",
  "crates/homecoming_amenable",
  "crates/homecoming_core",
  "crates/homecoming_derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/crumplecup/homecoming"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
homepage = "https://github.com/crumplecup/homecoming"
documentation = "https://docs.rs/homecoming"

[workspace.dependencies]
homecoming = { path = "crates/homecoming", version = "0.1.0" }
homecoming_amenable = { path = "crates/homecoming_amenable", version = "0.1.0" }
homecoming_core = { path = "crates/homecoming_core", version = "0.1.0" }
homecoming_derive = { path = "crates/homecoming_derive", version = "0.1.0" }
petgraph = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
