[package]
name = "homecoming_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true

description = "Code: high-fidelity capture, isolation, and replay of Rust source"
keywords = ["codegen", "syn", "petgraph", "proc-macro", "agent"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
petgraph = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
