[package]
name = "homecoming_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true

description = "Derive macro generating Code impls, extracted from proven hand-written patterns"
keywords = ["codegen", "derive", "proc-macro"]
categories = ["development-tools", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
homecoming_core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
